visual changes to the list items (truncate and enlarge the text, fix spacing of items)

--- a/styles/atom-git-replay.less
+++ b/styles/atom-git-replay.less
@@ -4,6 +4,12 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
+.truncate () {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .atom-git-replay {
   overflow-y: scroll;
   height: 100%;
@@ -15,7 +21,11 @@
     display: block;
     width: 100%;
     max-width: 15vw;
-    padding: 0.25em 0.5em;
+    padding: 0 0.5em;
+    margin-bottom: 0.25em;
+    font-size: 1.25em;
     text-align: left;
+
+    .truncate();
   }
 }
